--- a/views/board/index.ejs
+++ b/views/board/index.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/header %>
+<%- include('partials/header') -%>
 
   <a href="/">&#60; Home Page</a>
   <h1>Welcome to the board /b/<%= board.name %></h1>
@@ -35,4 +35,4 @@
   <!-- <p><%= board %></p> -->
 
 
-<% include ../partials/footer %>
+  <%- include('partials/footer') -%>
