--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<%- include('partials/header') -%>
 
   <h1>Welcome to the Message App</h1>
   <!-- <ul>
@@ -34,4 +34,4 @@
     <button>Add board</button>
   </form>
 
-<% include ./partials/footer %>
+  <%- include('partials/footer') -%>
